5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4427/executions/1679_1879.log
== SUBMITION (2019-05-01 13:17:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()

H = extras - (1/4)*(faltas)

if H > 400:
    print(extras, " extras e ", faltas, " faltas","\n", "R$500")
elif H <= 400:
    print(extras, " extras e ", faltas
-- EXECUTION TIME:
0.190325
-- ERROR:
  File "/home/codebench/codes/1679/1879/main.py", line 12
    
                                          ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:18:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()

H = extras - (1/4)*(faltas)

if H > 400:
    print(extras, " extras e ", faltas, " faltas","\n", "R$500")
elif H <= 400:
    print(extras, " extras e ", faltas, " faltas", "\n", "R$100")
-- EXECUTION TIME:
0.170902
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0  extras e  20.0  faltas 
 R$500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5  extras e  100.0  faltas 
 R$100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0  extras e  44.0  faltas 
 R$100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:19:11) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()

H = extras - (1/4)*(faltas)

if H > 400:
    print(extras, " extras e ", faltas, " de faltas","\n", "R$500")
elif H <= 400:
    print(extras, " extras e ", faltas, " de faltas", "\n", "R$100")
-- EXECUTION TIME:
0.139012
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0  extras e  20.0  de faltas 
 R$500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5  extras e  100.0  de faltas 
 R$100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0  extras e  44.0  de faltas 
 R$100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:21:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()

H = extras - (1/4)*(faltas)

if H > 400:
    print(extras, " extras e ", faltas, " de faltas","\n", "R$500")
elif H <= 400:
    print(extras, " extras e ", faltas, " de faltas", "\n", "R$100")
-- OUTPUT:
420.0  extras e  20.0  de faltas 
 R$500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:22:00) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()

H = extras - (1/4)*(faltas)

if H > 400:
    print(extras, " extras e ", faltas, " de falta","\n", "R$500")
elif H <= 400:
    print(extras, " extras e ", faltas, " de falta", "\n", "R$100")
-- OUTPUT:
420.0  extras e  20.0  de falta 
 R$500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:22:03) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()

H = extras - (1/4)*(faltas)

if H > 400:
    print(extras, " extras e ", faltas, " de falta","\n", "R$500")
elif H <= 400:
    print(extras, " extras e ", faltas, " de falta", "\n", "R$100")
-- EXECUTION TIME:
0.126651
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0  extras e  20.0  de falta 
 R$500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5  extras e  100.0  de falta 
 R$100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0  extras e  44.0  de falta 
 R$100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:22:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()

H = extras - (1/4)*(faltas)

if H > 400:
    print(extras, " extras e ", faltas, " de falta", end="")
		print("R$500")
elif H <= 400:
    print(extras, " extras e ", faltas, " de falta", end="")
		print("R$100")
-- ERROR:
File "XXXX", line 10
    print("R$500")
                 ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:23:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()

H = extras - (1/4)*(faltas)

if H > 400:
	print(extras, " extras e ", faltas, " de falta", end="")
	print("R$500")
elif H <= 400:
	print(extras, " extras e ", faltas, " de falta", end="")
	print("R$100")
-- OUTPUT:
420.0  extras e  20.0  de faltaR$500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:23:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()

H = extras - (1/4)*(faltas)

if H > 400:
	print(extras, " extras e ", faltas, " de falta", end="")
	print("R$500")
elif H <= 400:
	print(extras, " extras e ", faltas, " de falta", end="")
	print("R$100")
-- EXECUTION TIME:
0.129232
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0  extras e  20.0  de faltaR$500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5  extras e  100.0  de faltaR$100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0  extras e  44.0  de faltaR$100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:23:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()

H = extras - (1/4)*(faltas)

if H > 400:
	print(extras, " extras e ", faltas, " de falta", end="")
	print("R$500")
elif H <= 400:
	print(extras, " extras e ", faltas, " de falta", end="")
	print("R$100")
-- EXECUTION TIME:
0.127098
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0  extras e  20.0  de faltaR$500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5  extras e  100.0  de faltaR$100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0  extras e  44.0  de faltaR$100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:23:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()

H = extras - (1/4)*(faltas)

if H > 400:
	print(extras, " extras e ", faltas, " de falta", end="")
	print("R$500")
elif H <= 400:
	print(extras, " extras e ", faltas, " de falta", end="")
	print("R$100")
-- OUTPUT:
420.0  extras e  20.0  de faltaR$500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:23:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()

H = extras - (1/4)*(faltas)

if H > 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$500")
elif H <= 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$100")
-- OUTPUT:
420.0  extras e  20.0  de falta
R$500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:24:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()

H = extras - (1/4)*(faltas)

if H > 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$500.0")
elif H <= 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$100.0")
-- OUTPUT:
420.0  extras e  20.0  de falta
R$500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:24:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()

H = extras - (1/4)*(faltas)

if H > 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$500.0")
elif H <= 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$100.0")
-- EXECUTION TIME:
0.211586
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0  extras e  20.0  de falta
R$500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5  extras e  100.0  de falta
R$100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0  extras e  44.0  de falta
R$100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:24:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()

H = extras - (1/4)*(faltas)

if H > 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$500.0")
elif H <= 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$100.0")
-- OUTPUT:
420.0  extras e  20.0  de falta
R$500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:24:32) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()

H = extras - (1/4)*(faltas)

if H > 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$500.0")
elif H <= 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$100.0")
-- OUTPUT:
420.0  extras e  20.0  de falta
R$500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:24:44) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()

H = extras - (1/4)*(faltas)

if H > 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$500.0")
elif H <= 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$100.0")
-- OUTPUT:
420.0  extras e  20.0  de falta
R$500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:26:11) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()

H = (extras - (0,25)*(faltas))

if H > 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$500.0")
elif H <= 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$100.0")
-- EXECUTION TIME:
0.204328
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 6, in <module>
    H = (extras - (0,25)*(faltas))
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:26:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()

H = (extras - (0,25)*(faltas))

if H > 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$500.0")
elif H <= 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$100.0")
-- EXECUTION TIME:
0.19712
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 6, in <module>
    H = (extras - (0,25)*(faltas))
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:26:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()

H = (extras - (0,25)*(faltas))

if H > 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$500.0")
elif H <= 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$100.0")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    H = (extras - (0,25)*(faltas))
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:26:38) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()

H = (extras - (0,25)*(faltas))

if H > 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$500.00")
elif H <= 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$100.00")
-- EXECUTION TIME:
0.209543
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 6, in <module>
    H = (extras - (0,25)*(faltas))
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:26:39) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()

H = (extras - (0,25)*(faltas))

if H > 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$500.00")
elif H <= 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$100.00")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    H = (extras - (0,25)*(faltas))
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:27:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()

H = (extras - 0,25*(faltas))

if H > 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$500.00")
elif H <= 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$100.00")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if H > 400:
TypeError: '>' not supported between instances of 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:28:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()
meio = float()

meio = 1/4*faltas

H = extras - meio

if H > 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$500.00")
elif H <= 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$100.00")
-- OUTPUT:
420.0  extras e  20.0  de falta
R$500.00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:29:01) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()
meio = float()

meio = 1/4*faltas

H = extras - meio

if H > 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$500.00")
elif H <= 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$100.00")
-- EXECUTION TIME:
0.128225
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0  extras e  20.0  de falta
R$500.00
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5  extras e  100.0  de falta
R$100.00
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0  extras e  44.0  de falta
R$100.00
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:30:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()
meio = float()

meio = 1/4*faltas

H = extras - meio

if H > 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$500.0")
elif H <= 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$100.0")
-- EXECUTION TIME:
0.16166
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0  extras e  20.0  de falta
R$500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5  extras e  100.0  de falta
R$100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0  extras e  44.0  de falta
R$100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:30:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()
meio = float()

meio = 1/4*faltas

H = extras - meio

if H > 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$500.0")
elif H <= 400:
	print(extras, " extras e ", faltas, " de falta")
	print("R$100.0")
-- OUTPUT:
420.0  extras e  20.0  de falta
R$500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:30:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()
meio = float()

meio = 1/4*faltas

H = extras - meio

if H > 400:
	print(extras, "extras e ", faltas,"de falta")
	print("R$500.0")
elif H <= 400:
	print(extras, " extras e", faltas, "de falta")
	print("R$100.0")
-- OUTPUT:
420.0 extras e  20.0 de falta
R$500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:30:52) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()
meio = float()

meio = 1/4*faltas

H = extras - meio

if H > 400:
	print(extras, "extras e ", faltas,"de falta")
	print("R$500.0")
elif H <= 400:
	print(extras, " extras e", faltas, "de falta")
	print("R$100.0")
-- EXECUTION TIME:
0.211181
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e  20.0 de falta
R$500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5  extras e 100.0 de falta
R$100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0  extras e 44.0 de falta
R$100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:31:00) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()
meio = float()

meio = 1/4*faltas

H = extras - meio

if H > 400:
	print(extras, "extras e ", faltas,"de falta")
	print("R$500.0")
elif H <= 400:
	print(extras, " extras e", faltas, "de falta")
	print("R$100.0")
-- OUTPUT:
420.0 extras e  20.0 de falta
R$500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:32:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()
meio = float()

meio = 1/4*faltas

H = extras - meio

if H > 400:
	print(extras, "extras e ", faltas,"de falta")
	print("R$ 500.0")
elif H <= 400:
	print(extras, " extras e", faltas, "de falta")
	print("R$ 100.0")
-- EXECUTION TIME:
0.152378
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e  20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5  extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0  extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:20:13) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()
meio = float()

meio = 1/4*faltas

H = extras - meio

if H > 400:
	print(extras, "extras e ", faltas,"de falta")
	print("R$ 500.0")
elif H <= 400:
	print(extras, " extras e", faltas, "de falta")
	print("R$ 100.0")
-- OUTPUT:
420.0 extras e  20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:20:43) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras = float(input())
faltas = float(input())
H = float()
meio = float()

meio = 1/4*faltas

H = extras - meio

if H > 400:
	print(extras, "extras e ", faltas,"de falta")
	print("R$ 500.0")
elif H <= 400:
	print(extras, " extras e", faltas, "de falta")
	print("R$ 100.0")
-- EXECUTION TIME:
0.169615
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e  20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5  extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0  extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
